--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "nuxt-windicss": "^2.0.11",
     "nuxt3": "latest",
+    "sass": "^1.44.0",
     "vite-plugin-svg-icons": "^1.0.5"
   },
   "dependencies": {
