--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "nuxt-windicss": "^2.0.11",
-    "nuxt3": "latest",
+    "nuxt-windicss": "^2.2.2",
+    "nuxt3": "^3.0.0-27338323.1e98259",
     "sass": "^1.44.0",
     "vite-plugin-svg-icons": "^1.0.5"
   },
