--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   },
   "devDependencies": {
     "nuxt-windicss": "^2.2.2",
-    "nuxt3": "^3.0.0-27338323.1e98259",
+    "nuxt3": "^3.0.0-27398533.8edd481",
     "sass": "^1.44.0",
     "vite-plugin-svg-icons": "^1.0.5"
   },
   "dependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/svg": "^0.3.0",
+    "@nuxtjs/svg": "^0.4.0",
     "@originjs/vite-plugin-commonjs": "^1.0.1",
-    "@vueuse/core": "^6.8.0",
+    "@vueuse/core": "^7.5.5",
+    "@vueuse/nuxt": "^7.5.5",
+    "file-loader": "6.2.0",
+    "nuxt-use-motion": "^2.0.0-beta.11",
+    "raw-loader": "4.0.2",
     "swiper": "^7.2.0",
     "vite-plugin-windicss": "^1.6.3",
     "vue-awesome-swiper": "^4.1.1",
