--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/svg": "^0.4.0",
     "@originjs/vite-plugin-commonjs": "^1.0.1",
+    "@pinia/nuxt": "^0.1.8",
     "@vueuse/core": "^7.5.5",
     "@vueuse/nuxt": "^7.5.5",
     "file-loader": "6.2.0",
     "nuxt-use-motion": "^2.0.0-beta.11",
+    "pinia": "^2.0.11",
     "raw-loader": "4.0.2",
     "swiper": "^7.2.0",
     "vite-plugin-windicss": "^1.6.3",
