--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,20 @@
 {
   "functions": {
-    "source": "functions",
+    "source": ".output/server",
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
+      "npm --prefix \"%RESOURCE_DIR\" run lint"
     ]
   },
   "hosting": {
-    "public": "public",
+    "site": "decent-envoy-295515",
+    "public": ".output/public",
+    "cleanUrls": true,
+    "rewrites": [
+      {
+        "source": "**",
+        "function": "server"
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
