--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,12 @@
 {
   "functions": {
-    "source": ".output/server",
-    "predeploy": [
-      "npm --prefix \"%RESOURCE_DIR\" run lint"
-    ]
+    "source": ".output/server"
   },
   "hosting": {
+    "site": "decent-envoy-295515",
     "public": ".output/public",
+    "cleanUrls": true,
+    "rewrites": [{ "source": "**", "function": "server" }],
     "ignore": [
       "firebase.json",
       "**/.*",
