--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/svg": "^0.4.0",
     "@originjs/vite-plugin-commonjs": "^1.0.1",
     "@pinia/nuxt": "^0.1.8",
+    "@vueuse/core": "^8.3.1",
     "@vueuse/nuxt": "^8.2.6",
     "file-loader": "6.2.0",
     "h3": "^0.7.2",
