--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@originjs/vite-plugin-commonjs": "^1.0.1",
     "@pinia/nuxt": "^0.1.8",
     "@vueuse/core": "^8.3.1",
+    "@vueuse/head": "^0.7.6",
     "@vueuse/motion": "^2.0.0-beta.12",
     "@vueuse/nuxt": "^8.2.6",
     "file-loader": "6.2.0",
